Add username in localStorage to display in html pages

--- a/feedback.html
+++ b/feedback.html
@@ -17,17 +17,17 @@
 
         <header>
             <h1>
-                Let's test you <span id="username-area"></span>!
+                Let's test you !
                 <br>
                 <i class="fa-regular fa-circle-question"></i>
             </h1>
         </header>
 
         <div id="score-area">
-            <p id="score">Correct Answers <span id="result"></span>/7</p>
+            <p id="score">Correct Answers <span id="final-result"></span>/7</p>
         </div>
         <div id="end-message">
-            Thanks for Playing !
+            Thanks for Playing <span id="username-area"></span> !
             <p id="feedback">You did great !</p>
             <div id="image">😀</div>
         </div>
