Add end-message to quizz.html

--- a/quizz.html
+++ b/quizz.html
@@ -38,6 +38,15 @@
                 <input type="submit" value="Submit" id="submit" data-type="submit" onclick="displayNextQuestion()">
             </form>
         </div>
+
+        <div id="end-message">
+            Thanks for Playing <span id="username-final"></span> !
+            <p id="feedback"></p>
+
+            <a class="btn" id="restart" onclick="restartGame()">Restart Game</a>
+            <a class="btn" id="exit" onclick="exitGame()">Exit Game</a>
+        </div>
+
     </div>
 
     <script src="https://kit.fontawesome.com/cc20595ad4.js" crossorigin="anonymous"></script>
