Add game description functions in JS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>
             Let's test you!
             <br>
-            <i class="fa-regular fa-circle-question"></i>
+            <i class="fa-regular fa-circle-question" id="icon"></i>
         </h1>
         <div>
             <p>Enter your username</p>
