--- a/quizz.html
+++ b/quizz.html
@@ -19,7 +19,7 @@
             <h1>
                 Let's test you <span id="username-area"></span>!
                 <br>
-                <i class="fa-regular fa-circle-question"></i>
+                <i class="fa-regular fa-circle-question" id="icon"></i>
             </h1>
         </header>
 
