Add comments in the html pages

--- a/quizz.html
+++ b/quizz.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- font awesome and google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Wix+Madefor+Text&display=swap" rel="stylesheet">
@@ -13,6 +14,7 @@
 </head>
 
 <body>
+    <!-- Quizz page with score and one random question displayed -->
     <div class="background" id="quizz-content-area">
 
         <header>
@@ -38,6 +40,8 @@
                 <input type="submit" value="Submit" id="submit" data-type="submit" onclick="displayNextQuestion()">
             </form>
         </div>
+
+        <!-- Quizz page end message displayed only at the end ofthe game -->
 
         <div id="end-message">
             Thanks for Playing <span id="username-final"></span> !
