Update README Features content

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p>Enter your username</p>
             <form method="GET" action="quizz.html" id="start-form">
                 <label for="username">Username :</label>
-                <input type="text" id="username" name="username" min="4" required>
+                <input type="text" id="username" name="username" required>
                 <br>
                 <input type="submit" id="start" value="Start">
             </form>
