Add accessibility in html pages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>
             Let's test you!
             <br>
-            <i class="fa-regular fa-circle-question" id="icon"></i>
+            <i class="fa-regular fa-circle-question"id="icon"></i>
         </h1>
         <div>
             <p>Enter your username</p>
@@ -31,7 +31,7 @@
                 <label for="username">Username :</label>
                 <input type="text" id="username" name="username" required>
                 <br>
-                <input type="submit" id="start" value="Start">
+                <input type="submit" id="start" value="Start"  aria-label="Confirm your username (Start the quizz)" >
             </form>
 
         </div>
