Add description paragraph in html pages

--- a/quizz.html
+++ b/quizz.html
@@ -22,6 +22,11 @@
                 Let's test you <span id="username-area"></span>!
                 <br>
                 <i class="fa-regular fa-circle-question" id="icon"></i>
+                <p id="description">
+                    This is a General knowledge Quizz wich will test you on 7 different subjects.
+                    <br>
+                    Don't hesitate to play again to access new questions ! 📜
+                </p>
             </h1>
         </header>
 
