--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             Let's test you!
             <br>
             <i class="fa-regular fa-circle-question"id="icon"></i>
+            <p id="description">
+                This is a General knowledge Quizz wich will test you on 7 different subjects.
+                <br>
+                Don't hesitate to play again to access new questions ! 📜
+            </p>
         </h1>
         <div>
             <p>Enter your username</p>
