Fix Exit button

--- a/quizz.html
+++ b/quizz.html
@@ -53,7 +53,7 @@
             <p id="feedback"></p>
 
             <a class="btn" id="restart" aria-label="Will create a new round of questions" onclick="restartGame()">Restart Game</a>
-            <a class="btn" id="exit" aria-label="Go to Google page" onclick="exitGame()">Exit Game</a>
+            <a class="btn" id="exit" aria-label="Go to Google page" href="https://www.google.com/">Exit Game</a>
         </div>
 
     </div>
