Add answer-feedback in quizz.html

--- a/quizz.html
+++ b/quizz.html
@@ -46,6 +46,13 @@
             </form>
         </div>
 
+        <!--Display Answer-->
+
+        <div id="answer-feedback">
+           <p id="theAnswer">Hello</p>
+           <button id="next">Next Question</button>
+        </div>
+
         <!-- Quizz page end message displayed only at the end ofthe game -->
 
         <div id="end-message">
