Update all pages to clean codes

--- a/quizz.html
+++ b/quizz.html
@@ -42,14 +42,14 @@
 
                 <ul id="options" aria-label="Select 1 answer"></ul>
 
-                <input type="submit" value="Submit" id="submit" data-type="submit" aria-label="Submit your selected answer" onclick="displayNextQuestion()">
+                <input type="submit" value="Submit" id="submit" aria-label="Submit your selected answer" onclick="displayNextQuestion()">
             </form>
         </div>
 
         <!--Display Answer-->
 
         <div id="answer-feedback">
-           <p id="theAnswer">Hello</p>
+           <p id="theAnswer"></p>
            <button id="next">Next Question</button>
         </div>
 
